--- a/views/card-back-section.html
+++ b/views/card-back-section.html
@@ -3,8 +3,31 @@
     <link rel="stylesheet" href="https://p.trellocdn.com/power-up.min.css">
     <link rel="stylesheet" href="../public/css/card-back-section.css">
     <script src="https://p.trellocdn.com/power-up.min.js"></script>
+
+    <style>
+      metal {
+        border-radius: 5px;
+        background: url('../img/menu.png') repeat-x #fff;
+        border: 1px solid #999;
+        border-bottom: 1px solid #666;
+        box-shadow: inset 0px 0px 5px #999;
+        box-shadow: 0px 2px 6px #777;
+        background-size: contain;
+      }
+            
+      hui {
+        z-index: 3;
+        text-align: center;
+        margin-left: 4px;
+        margin-top: 4px;
+        font-size: small;
+      }
+    </style>
   </head>
   <body>
+    <div class="metal hui" style="width: 100%;">
+      Fields
+    </div>
     <form class="fieldgrid" id="fieldsection">
       
     </form>
