--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -11,7 +11,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="leftbarviewbox">
                 
                   <style type="text/css">
-                    rect.metal {
+                    .metal {
                       border-radius: 5px;
                       background: url('../img/menu.png') repeat-x #fff;
                       border: 1px solid #999;
@@ -21,7 +21,7 @@
                       background-size: contain;
                     }
                           
-                    rect.hui {
+                    .hui {
                       z-index: 3;
                       text-align: center;
                       margin-left: 4px;
