--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -31,22 +31,22 @@
                   </style>
                   <defs>
                     <pattern id="homeimg" x="0" y="0" patternUnits="userSpaceOnUse" height="1" width="1">
-                      <image x="0" y="0" xlink:href="../img/smile.png"></image>
+                      <image x="0" y="0" xlink:href="https://ihorkulinich.github.io/js-v1/img/smile.png"></image>
                     </pattern>
                     <pattern id="cellimg" x="0" y="0" patternUnits="userSpaceOnUse" height="1" width="1">
-                      <image x="0" y="0" xlink:href="../img/cell.png"></image>
+                      <image x="0" y="0" xlink:href="https://ihorkulinich.github.io/js-v1/img/cell.png"></image>
                     </pattern>
                     <pattern id="tableimg" x="0" y="0" patternUnits="userSpaceOnUse" height="1" width="1">
-                      <image x="0" y="0" xlink:href="../img/table.png"></image>
+                      <image x="0" y="0" xlink:href="https://ihorkulinich.github.io/js-v1/img/table.png"></image>
                     </pattern>
                     <pattern id="dashimg" x="0" y="0" patternUnits="userSpaceOnUse" height="1" width="1">
-                      <image x="0" y="0" xlink:href="../img/dashboard.png"></image>
+                      <image x="0" y="0" xlink:href="https://ihorkulinich.github.io/js-v1/img/dashboard.png"></image>
                     </pattern>
                     <pattern id="teamimg" x="0" y="0" patternUnits="userSpaceOnUse" height="1" width="1">
-                      <image x="0" y="0" xlink:href="../img/team.png"></image>
+                      <image x="0" y="0" xlink:href="https://ihorkulinich.github.io/js-v1/img/team.png"></image>
                     </pattern>
                     <pattern id="wheelimg" x="0" y="0" patternUnits="userSpaceOnUse" height="1" width="1">
-                      <image x="0" y="0" xlink:href="../img/wheel.png"></image>
+                      <image x="0" y="0" xlink:href="https://ihorkulinich.github.io/js-v1/img/wheel.png"></image>
                     </pattern>
                 </defs>
                 
