--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -13,7 +13,7 @@
                   <style type="text/css">
                     .metal {
                       border-radius: 5px;
-                      background: url('../img/menu.png') repeat-x #fff;
+                      background: url('https://ihorkulinich.github.io/js-v1/img/menu.png') repeat-x #fff;
                       border: 1px solid #999;
                       border-bottom: 1px solid #666;
                       box-shadow: inset 0px 0px 5px #999;
