--- a/public/css/board-bar.css
+++ b/public/css/board-bar.css
@@ -14,3 +14,221 @@ body{
 .radied{
   border-radius: 7px;
 }
+
+.shadowed{
+  border: 1px solid #999;
+  border-bottom: 1px solid #666;
+  box-shadow: inset 0px 0px 5px #999;
+  box-shadow: 0px 2px 6px #777;
+}
+
+.metal {
+  background: url('https://ihorkulinich.github.io/js-v1/img/menu.png') repeat-x #fff;
+  border-radius: 10px;
+  background-size: cover;
+}
+      
+.hui {
+  text-align: center;
+  margin-left: 4px;
+  margin-top: 4px;
+  font-size: small;
+}  
+
+.menuicon{
+  border-radius: 20px; 
+  height: 21px; 
+  width: 21px; 
+  margin-top: 8.5px;
+  margin-left: 18px;
+}
+
+.menuicon:first-child{
+  margin-top: 14px;
+}
+
+.menuicon:hover{
+  margin-left: 50px;
+}
+
+.circle-link {
+  border-radius: 40px;
+  background-color: white;
+  border: 1px solid #eeeeee;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: 4s ease .5s;
+}
+
+.circle-link:hover {
+  transform: translateY(-0.25rem);
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+}
+
+.card {
+  all: unset;
+  border-radius: 4px;
+  border: 1px solid #eee;
+  background-color: #fafafa;
+  height: 40px;
+  width: 200px;
+  transition: all 0.2s ease-in-out;
+
+  border-radius: 10px;
+  box-shadow: 0px 2px 6px #777;
+  padding: 5px;
+  background: #fff;
+  border: 1px solid #999;
+  border-bottom: 1px solid #666;
+  box-shadow: inset 0px 0px 5px #999;
+}
+
+[class*=icon].interactive:hover,[class*=icon].interactive.active,[class*=block2].interactive:hover,[class*=block2].interactive.active {
+  --offset-amount: 10px;
+  --base-color: #eeeeee;
+}
+/* Style overwrite */
+
+.interactive:hover {
+  cursor:pointer;
+}
+
+/* Base elements */
+
+[class*=block2]{
+  height: 40px;
+  width: 200px;
+}
+
+[class*=block2],[class*=block3] {
+  border-radius: 7px;
+  color: var(--text-color);
+  transition: background var(--transition-speed) ease, box-shadow var(--transition-speed) ease, color var(--transition-speed) ease;
+  
+  --outset-shadow: var(--offset-amount) var(--offset-amount) var(--blur-amount) var(--spread-amount) var(--shadow-color), calc(var(--offset-amount) * -1) calc(var(--offset-amount) * -1) var(--blur-amount) var(--spread-amount) var(--light-color);
+  --inset-shadow: inset var(--offset-amount) var(--offset-amount) var(--blur-amount) var(--spread-amount) var(--shadow-color), inset calc(var(--offset-amount) * -1) calc(var(--offset-amount) * -1) var(--blur-amount) var(--spread-amount) var(--light-color);
+}
+
+[class*=icon] {
+  --size: 15px;
+  width: var(--size);
+  height: var(--size);
+  border-radius: 50%;
+  padding: 4px;
+  color: var(--text-color);
+  font-weight: bold;
+  text-align: center;
+  font-size: 20px;
+  transition: margin-left 1s ease .1s, background var(--transition-speed) ease, box-shadow var(--transition-speed) ease, color var(--transition-speed) ease;
+  
+  --outset-shadow: var(--offset-amount) var(--offset-amount) var(--blur-amount) var(--spread-amount) var(--shadow-color), calc(var(--offset-amount) * -1) calc(var(--offset-amount) * -1) var(--blur-amount) var(--spread-amount) var(--light-color);
+  --inset-shadow: inset var(--offset-amount) var(--offset-amount) var(--blur-amount) var(--spread-amount) var(--shadow-color), inset calc(var(--offset-amount) * -1) calc(var(--offset-amount) * -1) var(--blur-amount) var(--spread-amount) var(--light-color);
+}
+
+.block2 {
+  display:block;
+  border: 2px solid var(--base-color);
+  box-shadow: var(--inset-shadow), var(--outset-shadow), 0px 2px 6px #777, inset 0px 0px 5px #999;
+  background: var(--base-color);
+  /* Properties */
+  --offset-amount: 5px;
+  --blur-amount: 20px;
+  --spread-amount: 1px;
+  --transition-speed: 0.2s;
+
+  /* Base Color */
+  --base-color: #eeeeee;
+  --text-color: rgba(34, 48, 74);
+  --contrast-color: rgba(230, 230, 230, 1);
+  --shadow-color: rgba(200, 200, 200, 1);
+  --light-color: rgba(241,245,250, 1);
+  
+  /* Gradients */
+  --base-gradient: linear-gradient(90deg, var(--base-color) 0%, var(--contrast-color) 100%);
+}
+
+.block3{
+  height: 30px;
+  width: 110px;
+  display:block;
+  border: 2px solid var(--base-color);
+  box-shadow: var(--inset-shadow), var(--outset-shadow), 0px 0px 5px rgba(0,0,0,0.05), inset 0px 1px 0px rgba(255,255,255,0.5), inset 0px -1px 0px rgba(0,0,0,0.2);
+  background: var(--base-color);
+  /* Properties */
+  --offset-amount: 1px;
+  --blur-amount: 4px;
+  --spread-amount: 1px;
+  --transition-speed: 0.2s;
+
+  /* Base Color */
+  --base-color: #eeeeee;
+  --text-color: rgba(34, 48, 74);
+  --contrast-color: #ffffff;
+  --shadow-color: rgba(200, 200, 200, 1);
+  --light-color: rgba(241,245,250, 1);
+  
+  /* Gradients */
+  --base-gradient: linear-gradient(90deg, var(--base-color) 0%, var(--contrast-color) 100%);
+
+  background-image: url('../img/menu.png') repeat-x;
+  background-blend-mode: lighten;
+}
+
+.icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  padding: 4px;
+  box-shadow: var(--outset-shadow), 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24), inset 0px 0px 15px rgba(0,0,0,0.1);
+  background: var(--base-color);
+  border: 2px solid var(--base-color);
+  /* Properties */
+  --offset-amount: 3px;
+  --blur-amount: 5px;
+  --spread-amount: 1px;
+  --transition-speed: 0.2s;
+  
+  /* Base Color */
+  --base-color: #eeeeee;
+  --text-color: rgba(34, 48, 74);
+  --contrast-color: rgba(230, 230, 230, 1);
+  --shadow-color: rgba(200, 200, 200, 1);
+  --light-color: rgba(241,245,250, 1);
+  
+  /* Gradients */
+  --base-gradient: linear-gradient(90deg, var(--base-color) 0%, var(--contrast-color) 100%);
+}
+
+.icon:hover {
+  box-shadow: var(--outset-shadow), var(--inset-shadow);
+}
+
+.icon.active,.icon:active {
+  box-shadow: var(--inset-shadow);
+  background: var(--base-color);
+}
+
+#homecircleshad, #cellcircleshad, #tablecircleshad, #dashcircleshad, #teamcircleshad{
+  background-color: #777; 
+  opacity: 0;
+  transition: opacity 1s ease .1s, margin-left 1s ease .1s;
+  margin-left: -20px;
+}
+
+#homecircleborder, #cellcircleborder, #tablecircleborder, #dashcircleborder, #teamcircleborder{
+  background-color: #999; 
+  opacity: 0;
+  transition: opacity 1s ease .1s, margin-left 1s ease .1s;
+  margin-left: -20px;
+}
+
+#homecircle, #cellcircle, #tablecircle, #dashcircle, #teamcircle{
+  transition: opacity 1s ease .1s, margin-left 1s ease .1s;
+  margin-left: -20px;
+  opacity: 0;
+}
