--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -315,9 +315,9 @@
                 
               </form>
           </div>
-          <div style="background: url('https://ihorkulinich.github.io/js-v1/img/smile.png') no-repeat; background-size: contain;">
+          <a href="trying.html"><div style="background: url('https://ihorkulinich.github.io/js-v1/img/smile.png') no-repeat; background-size: contain;">
             
-          </div>
+          </div></a>
           <div class="blured radied">
             <div class="card block2">
               <div style="width: 50px; height: 50px; background: url('https://ihorkulinich.github.io/js-v1/img/wheel.png') no-repeat; background-size: contain;"></div>
