--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -12,7 +12,7 @@
   </head>
   <body style="background: lightgrey; padding: 5px;">
     
-    <div style="display: grid; grid-template-columns: 110px calc( 100% - 230px ) 110px; grid-auto-rows: 100%; grid-column-gap: 5px; width: 100%; height: 200px;">
+    <div style="display: grid; grid-template-columns: 110px calc( 100% - 160px ) 40px; grid-auto-rows: 100%; grid-column-gap: 5px; width: 100%; height: 200px;">
         <div id="leftbardiv">
           
               <div id="leftmenu" style="height: calc( 100% - 6px ) ; width: 80px; display: inline-block; z-index: 5;">
@@ -315,16 +315,26 @@
                 
               </form>
           </div>
-          <a href="trying.html"><div style="background: url('https://ihorkulinich.github.io/js-v1/img/smile.png') no-repeat; background-size: contain;">
+          <div>
+            <a href="trying.html">
+              <div style="background: url('https://ihorkulinich.github.io/js-v1/img/smile.png') no-repeat; background-size: contain; height: 100%; width: 100%;">
             
-          </div></a>
+              </div>
+            </a>
+          </div>
           <div class="blured radied">
-            <div class="card block2">
-              <div style="width: 50px; height: 50px; background: url('https://ihorkulinich.github.io/js-v1/img/wheel.png') no-repeat; background-size: contain;"></div>
+            <div class="card block2" style="width: calc( 100% - 25px ); height: 42px; margin-left: 5px; margin-top: 5px;">
+              <div style="width: 40px; height: 40px; background: url('https://ihorkulinich.github.io/js-v1/img/wheel.png') no-repeat; background-size: contain;"></div>
+            </div>
+            <div class="card block2" style="width: calc( 100% - 25px ); height: 42px; margin-left: 5px; margin-top: 5px;">
+              <div style="width: 40px; height: 40px; background: url('https://ihorkulinich.github.io/js-v1/img/faq.png') no-repeat; background-size: contain;"></div>
+            </div>
+            <div class="card block2" style="width: calc( 100% - 25px ); height: 42px; margin-left: 5px; margin-top: 5px;">
+              <div style="width: 40px; height: 40px; background: url('https://ihorkulinich.github.io/js-v1/img/sug.png') no-repeat; background-size: contain;"></div>
             </div>
           </div>
         </div>
-        <div>
+        <div class="metal hui shadowed">
         </div>    
       </div>
     <script src="../public/js/board-bar.js"></script>
