--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="https://p.trellocdn.com/power-up.min.css">
     <link rel="stylesheet" href="../public/css/board-bar.css">
+    <link rel="stylesheet" href="../public/css/main.css">
     <script src="https://p.trellocdn.com/power-up.min.js"></script>
     
     <style>
@@ -11,7 +12,8 @@
     </style>
   </head>
   <body style="background: lightgrey; padding: 5px;">
-    
+    <div id="back">
+    </div>
     <div style="display: grid; grid-template-columns: 110px calc( 100% - 160px ) 40px; grid-auto-rows: 100%; grid-column-gap: 5px; width: 100%; height: 200px;">
         <div id="leftbardiv">
           
