--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,7 +18,7 @@ body{
     margin-top: 0px;
     bottom: 0;
     position: fixed;
-    background: url('../img/bg.png') repeat, url('../img/bg.jpg') repeat;
+    background: url('../../img/bg.png') repeat, url('../../img/bg.jpg') repeat;
     background-blend-mode: lighten; /*lighten, difference,exclusion,multiply */
     height: calc( 100vh + 200px );
     width: 100vw; 
