--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,3 +24,35 @@ body{
     width: 100vw; 
     z-index: -1;
 }
+
+.blured {
+    background: rgba(255,255,255,0.001);
+    border: 2px solid rgba(255,255,255,0.3);
+    box-shadow: 0 0 80px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+}
+
+.radied{
+  border-radius: 7px;
+}
+
+.shadowed{
+  border: 1px solid #999;
+  border-bottom: 1px solid #666;
+  box-shadow: inset 0px 0px 5px #999;
+  box-shadow: 0px 2px 6px #777;
+}
+
+.metal {
+  background: url('https://ihorkulinich.github.io/js-v1/img/menu.png') repeat-x #fff;
+  border-radius: 10px;
+  background-size: cover;
+}
+      
+.hui {
+  text-align: center;
+  margin-left: 4px;
+  margin-top: 4px;
+  font-size: small;
+}  
