--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -3,8 +3,10 @@
     <link rel="stylesheet" href="https://p.trellocdn.com/power-up.min.css">
     <link rel="stylesheet" href="../public/css/board-bar.css">
     <link rel="stylesheet" href="../public/css/main.css">
+    <link rel="stylesheet" href="../public/css/card.css">
+    <link rel="stylesheet" href="../public/css/icon.css">
+    <link rel="stylesheet" href="../public/css/buttons.css">
     <script src="https://p.trellocdn.com/power-up.min.js"></script>
-    
     <style>
 
       
