--- a/views/popup.html
+++ b/views/popup.html
@@ -2,42 +2,24 @@
   <head>
     <link rel="stylesheet" href="https://p.trellocdn.com/power-up.min.css">
     <style>
-      select { height: 30px; }
-      #settingsgroup button, #fieldsgroup button{
-          margin-left: 5px; 
-          width: 150px; 
-          margin-top: 0px;
-      }
-      hr {
-        border: none;
-        border-top: 3px double #333;
-        color: #333;
-        overflow: visible;
-        text-align: center;
-        height: 5px;
-    }
-    
-    hr .fss:after {
-        background: #fff;
-        content: 'Fields settings';
-        padding: 0 4px;
-        position: relative;
-        top: -13px;
-        display: inline;
-    }
-    
-    hr .fs:after {
-        background: #fff;
-        content: 'Field params';
-        padding: 0 4px;
-        position: relative;
-        top: -13px;
-        display: inline;
-    }
+      
     </style>
     <script src="https://p.trellocdn.com/power-up.min.js"></script>
+    <link rel="stylesheet" href="../public/css/main.css">
+    <link rel="stylesheet" href="../public/css/popup.css">
+    <link rel="stylesheet" href="../public/css/card.css">
+    <link rel="stylesheet" href="../public/css/icon.css">
+    <link rel="stylesheet" href="../public/css/buttons.css">
+    <link rel="stylesheet" href="../public/css/text.css">
+    <style>
+
+      
+      
+    </style>
   </head>
-  <body>
+  <body style="background: lightgrey; padding: 5px;">
+    <div id="back">
+    </div>
     <form id="settingsgroup">
         <button id="fieldssettings">
             <p style="display: inline;">Data fields</p>
