--- a/public/css/board-bar.css
+++ b/public/css/board-bar.css
@@ -45,3 +45,37 @@ body{
   margin-left: -20px;
   opacity: 0;
 }
+
+.messages {
+  background: rgba(255,255,255,0.001);
+  border: 1px solid rgba(255,255,255,0.3);
+  box-shadow: 0 0 80px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+}
+
+.leftArrow {
+  -webkit-clip-path: polygon(0% 50%, 100% 100%, 100% 0%);
+  clip-path: polygon(0% 50%, 100% 100%, 100% 0%);
+}
+
+.leftArrow, .rightArrow {
+  background: rgba(255,255,255,0.7);
+  width: 100%;
+  height: 95%;
+  margin-top:5px;
+  border: 3px solid rgba(255,255,255,0.8);
+  box-shadow: 0 0 80px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+}
+
+.rightArrow {
+  -webkit-clip-path: polygon(0% 100%, 100% 50%, 0% 0%);
+  clip-path: polygon(0% 100%, 100% 50%, 0% 0%);
+}
+
+.darkedArrow{
+  background: rgba(255,255,255,0.5);
+  border: 0;
+}
