--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -249,7 +249,8 @@
           <div class="blured radied">
             <div class="card block2" style="width: calc( 100% - 25px ); height: calc( 100% - 25px ); margin-left: 5px; margin-top: 5px;">
               <div style="width: 40px; height: 40px; background: url('https://ihorkulinich.github.io/js-v1/img/pers.png') no-repeat; background-size: contain;"></div>
-              <h2></h2>
+              <h2>Cabinet</h2><br>
+              <p>Some text ala cabinet</p>
             </div>
             
             <button id="addfield">
@@ -263,8 +264,19 @@
           <div>
             <a href="trying.html">
               <div style="background: url('https://ihorkulinich.github.io/js-v1/img/smile.png') no-repeat; background-size: contain; height: 100%; width: 100%;">
-            
               </div>
+
+              <div class="leftArrow darkedArrow" style="height: 50%;"></div>
+              <div class="messages" style="width: calc( 100% - 10px); height: 100%; border-radius: 5px; position: relative; z-index: 3; display: block;"> 
+                &#9888; status messagses
+              </div>
+              <div class="messages" style="width: calc( 100% - 20px); height: calc( 100% - 5px ); border-radius: 5px; position: relative; z-index: 2; left: 20px; top: calc( -100% + 8px); display: block;"> 
+                messagses
+              </div>
+              <div class="messages" style="width: calc( 100% - 30px); height: calc( 100% - 15px ); border-radius: 5px; position: relative; z-index: 1; left: 40px; top: calc( -200% + 26px); display: block;"> 
+                messagses
+              </div>
+
             </a>
           </div>
           <div class="blured radied">
