--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -262,10 +262,10 @@
 
           </div>
           <div>
-            <a href="trying.html">
-              <div style="background: url('https://ihorkulinich.github.io/js-v1/img/smile.png') no-repeat; background-size: contain; height: 100%; width: 100%;">
+            
+              <div style="background: url('https://ihorkulinich.github.io/js-v1/img/smile.png') no-repeat; background-size: contain; height: 100%; width: 55%; display: inline;">
               </div>
-
+              <div style="display: inline; height: 100%; width: 45%;"
               <div class="leftArrow darkedArrow" style="height: 50%;"></div>
               <div class="messages" style="width: calc( 100% - 10px); height: 100%; border-radius: 5px; position: relative; z-index: 3; display: block;"> 
                 &#9888; status messagses
@@ -276,8 +276,8 @@
               <div class="messages" style="width: calc( 100% - 30px); height: calc( 100% - 15px ); border-radius: 5px; position: relative; z-index: 1; left: 40px; top: calc( -200% + 26px); display: block;"> 
                 messagses
               </div>
-
-            </a>
+            </div>
+            
           </div>
           <div class="blured radied">
             <div class="card block2" style="width: calc( 100% - 25px ); height: 42px; margin-left: 5px; margin-top: 5px;">
