--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -265,7 +265,7 @@
             
               <div style="background: url('https://ihorkulinich.github.io/js-v1/img/smile.png') no-repeat; background-size: contain; height: 100%; width: 55%; display: inline;">
               </div>
-              <div style="display: inline; height: 100%; width: 45%;"
+              <div style="display: inline; height: 100%; width: 45%;">
               <div class="leftArrow darkedArrow" style="height: 50%;"></div>
               <div class="messages" style="width: calc( 100% - 10px); height: 100%; border-radius: 5px; position: relative; z-index: 3; display: block;"> 
                 &#9888; status messagses
