--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -266,17 +266,19 @@
               <div style="background: url('https://ihorkulinich.github.io/js-v1/img/smile.png') no-repeat; background-size: contain; height: 100%; width: 55%; display: inline;">
               </div>
               <div style="display: inline; height: 100%; width: 45%;">
-              <div class="leftArrow darkedArrow" style="height: 50%;"></div>
-              <div class="messages" style="width: calc( 100% - 10px); height: 100%; border-radius: 5px; position: relative; z-index: 3; display: block;"> 
-                &#9888; status messagses
+                <div class="leftArrow darkedArrow" style="height: 50px; width: 50px; display: inline;"></div>
+                <div>
+                  <div class="messages" style="width: calc( 100% - 10px); height: 100%; border-radius: 5px; position: relative; z-index: 3; display: block;"> 
+                    &#9888; status messagses
+                  </div>
+                  <div class="messages" style="width: calc( 100% - 20px); height: calc( 100% - 5px ); border-radius: 5px; position: relative; z-index: 2; left: 20px; top: calc( -100% + 8px); display: block;"> 
+                    messagses
+                  </div>
+                  <div class="messages" style="width: calc( 100% - 30px); height: calc( 100% - 15px ); border-radius: 5px; position: relative; z-index: 1; left: 40px; top: calc( -200% + 26px); display: block;"> 
+                    messagses
+                  </div>
+                </div>
               </div>
-              <div class="messages" style="width: calc( 100% - 20px); height: calc( 100% - 5px ); border-radius: 5px; position: relative; z-index: 2; left: 20px; top: calc( -100% + 8px); display: block;"> 
-                messagses
-              </div>
-              <div class="messages" style="width: calc( 100% - 30px); height: calc( 100% - 15px ); border-radius: 5px; position: relative; z-index: 1; left: 40px; top: calc( -200% + 26px); display: block;"> 
-                messagses
-              </div>
-            </div>
             
           </div>
           <div class="blured radied">
