--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -247,40 +247,66 @@
           </script>
         <div style="display: grid; grid-template-columns: calc( ( 100% - 10px ) / 3) calc( ( 100% - 10px ) / 3) calc( ( 100% - 10px ) / 3); grid-auto-rows: 100%; grid-column-gap: 5px; width: 100%; height: 100%;">
           <div class="blured radied">
-            <div class="card block2" style="width: calc( 100% - 25px ); height: calc( 100% - 25px ); margin-left: 5px; margin-top: 5px;">
-              <div style="width: 40px; height: 40px; background: url('https://ihorkulinich.github.io/js-v1/img/pers.png') no-repeat; background-size: contain;"></div>
-              <h2>Cabinet</h2><br>
+            <div class="card block2" style="padding: 15px; width: calc( 100% - 45px ); height: calc( 100% - 50px ); margin-left: 5px; margin-top: 5px;">
+              <div>
+                <div style="width: 40px; height: 40px; background: url('https://ihorkulinich.github.io/js-v1/img/pers.png') no-repeat; background-size: contain; display: inline-block;"></div>
+                <h2 style="display: inline;">Cabinet</h2><br>
+                
+              </div>
               <p>Some text ala cabinet</p>
-            </div>
-            
-            <button id="addfield">
+              <button id="addfield">
                 add field
               </button>
               <form id="addfieldset" style="margin-top: -5px;">
                 
               </form>
+            </div>
+            
+            
 
           </div>
-          <div>
+          <div style="display: grid; grid-template-columns: 55% 20px calc( 45% - 20px ); grid-auto-rows: 80% 20%; ">
             
-              <div style="background: url('https://ihorkulinich.github.io/js-v1/img/smile.png') no-repeat; background-size: contain; height: 100%; width: 55%; display: inline;">
+              <div style="background: url('https://ihorkulinich.github.io/js-v1/img/smile.png') no-repeat; background-size: contain; grid-row-start: 1; grid-row-end: 3;">
               </div>
-              <div style="display: inline; height: 100%; width: 45%;">
-                <div class="leftArrow darkedArrow" style="height: 50px; width: 50px; display: inline;"></div>
-                <div>
-                  <div class="messages" style="width: calc( 100% - 10px); height: 100%; border-radius: 5px; position: relative; z-index: 3; display: block;"> 
-                    &#9888; status messagses
-                  </div>
-                  <div class="messages" style="width: calc( 100% - 20px); height: calc( 100% - 5px ); border-radius: 5px; position: relative; z-index: 2; left: 20px; top: calc( -100% + 8px); display: block;"> 
-                    messagses
-                  </div>
-                  <div class="messages" style="width: calc( 100% - 30px); height: calc( 100% - 15px ); border-radius: 5px; position: relative; z-index: 1; left: 40px; top: calc( -200% + 26px); display: block;"> 
-                    messagses
-                  </div>
+              <div>
+                <div class="leftArrow darkedArrow" style="border: 1px solid white; height: 30px; margin-top: 20px;">
                 </div>
               </div>
+
+                <div>
+
+                  <div class="messages" style="width: calc( 100% - 10px); height: calc( 100% - 60px ); border-radius: 5px; position: relative; z-index: 3; display: block;"> 
+                    
+                  </div>
+                  <div class="messages" style="width: calc( 100% - 20px); height: calc( 100% - 60px ); border-radius: 5px; position: relative; z-index: 2; left: 15px; top: calc( -100% + 24px ); display: block;"> 
+                    
+                  </div>
+                  <div class="messages" style="width: calc( 100% - 30px); height: calc( 100% - 60px ); border-radius: 5px; position: relative; z-index: 1; left: 30px; top: calc( -200% + 47px); display: block;"> 
+                    
+                  </div>
+
+                </div>
+
+                <div style="grid-column-start: 2; grid-column-end: 4;">
+                
+                    <div class="left-button white-matte">
+                      <span style="padding-left: 12px;">
+                      &#8592;
+                      </span>
+                    </div>
+
+                    <div class="right-button white-matte">
+                      <span style="padding-left: 10px;">
+                        &#8594;
+                      </span>
+                    </div>
+                
+                </div>
+
+              </div>
             
-          </div>
+          
           <div class="blured radied">
             <div class="card block2" style="width: calc( 100% - 25px ); height: 42px; margin-left: 5px; margin-top: 5px;">
               <div style="width: 40px; height: 40px; background: url('https://ihorkulinich.github.io/js-v1/img/wheel.png') no-repeat; background-size: contain;"></div>
