--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -290,17 +290,22 @@
 
                 <div style="grid-column-start: 2; grid-column-end: 4;">
                 
-                    <div class="left-button white-matte">
+                    <a href="#" class="left-button white-matte">
                       <span style="padding-left: 12px;">
                       &#8592;
                       </span>
-                    </div>
+                    </a>
+                    <div style="margin-left: 60px; margin-top: -25px;">
+                      <a href="#" class="thumb white-matte"></a>
+                      <a href="#" class="thumb white-matte"></a>
+                      <a href="#" class="thumb white-matte"></a>
+                    </div>  
+                    <a href="#" class="right-button white-matte" style="margin-left: 120px; margin-top: -30px;">
 
-                    <div class="right-button white-matte">
                       <span style="padding-left: 10px;">
                         &#8594;
                       </span>
-                    </div>
+                    </a>
                 
                 </div>
 
