--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -103,7 +103,7 @@
                     m -30, 0 
                     a 30,30 0 1,0 60,0 
                     a 30,30 0 1,0 -60,0" fill="transparent" />
-                  <text id="hometextel" dx="60" class="smalltext" textLength="300" lengthAdjust="spacing" style="opacity: 0;">
+                  <text id="hometextel" dx="60" class="smalltext" textLength="300" lengthAdjust="spacing" style="opacity: 1;">
                     <textPath xlink:href="#homepath" id="hometextpath">Home</textPath>
                   </text>
 
@@ -232,6 +232,17 @@
                 el.style["margin-left"] = "18px";
                 el.addEventListener("mouseover",over);
               });
+              document.getElementById("homecircle").style["clip-path"] = "url(#homeclip)";
+              document.getElementById("homecircle").style["margin-left"] = "0";
+              document.getElementById("homecircle").style.opacity = "1";
+              document.getElementById("homecircleshad").style["clip-path"] = "url(#homeshadow)";
+              document.getElementById("homecircleshad").style["margin-left"] = "0";
+              document.getElementById("homecircleshad").style.opacity = "0.15";
+              document.getElementById("homecircleborder").style["clip-path"] = "url(#homeborder)";
+              document.getElementById("homecircleborder").style["margin-left"] = "0";
+              document.getElementById("homecircleborder").style.opacity = "1";
+              document.getElementById("homemenu").style["margin-left"] = "50px";
+              document.getElementById("hometextel").style.opacity = 1;
             }
 
             function menuout(){
@@ -243,6 +254,18 @@
             });
 
             document.getElementById("leftmenu").addEventListener("mouseleave",menuout);
+
+            document.getElementById("homecircle").style["clip-path"] = "url(#homeclip)";
+            document.getElementById("homecircle").style["margin-left"] = "0";
+            document.getElementById("homecircle").style.opacity = "1";
+            document.getElementById("homecircleshad").style["clip-path"] = "url(#homeshadow)";
+            document.getElementById("homecircleshad").style["margin-left"] = "0";
+            document.getElementById("homecircleshad").style.opacity = "0.15";
+            document.getElementById("homecircleborder").style["clip-path"] = "url(#homeborder)";
+            document.getElementById("homecircleborder").style["margin-left"] = "0";
+            document.getElementById("homecircleborder").style.opacity = "1";
+            document.getElementById("homemenu").style["margin-left"] = "50px";
+            document.getElementById("hometextel").style.opacity = 1;
 
           </script>
         <div style="display: grid; grid-template-columns: calc( ( 100% - 10px ) / 3) calc( ( 100% - 10px ) / 3) calc( ( 100% - 10px ) / 3); grid-auto-rows: 100%; grid-column-gap: 5px; width: 100%; height: 100%;">
@@ -270,7 +293,7 @@
               <div style="background: url('https://ihorkulinich.github.io/js-v1/img/smile.png') no-repeat; background-size: contain; grid-row-start: 1; grid-row-end: 3;">
               </div>
               <div>
-                <div class="leftArrow darkedArrow" style="border: 1px solid white; height: 30px; margin-top: 20px;">
+                <div class="leftArrow" style="border: 1px solid white; height: 30px; margin-top: 20px;">
                 </div>
               </div>
 
