--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -262,9 +262,11 @@
                 
               </div>
               <p>Some text ala cabinet</p>
-              <button id="addfield">
-                add field
-              </button>
+              <a href="#" id="addfield" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
+                <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add field</p>
+                <img src="../img/plus2.png" height="20px" width="20px" style="display: inline-block; margin-top: 3px;">
+              </a>
+
               <form id="addfieldset" style="margin-top: -5px;">
                 
               </form>
