--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -306,11 +306,11 @@
                       </span>
                     </a>
                     <div style="margin-left: 60px; margin-top: -25px;">
-                      <a href="#" class="thumb white-matte"></a>
-                      <a href="#" class="thumb white-matte"></a>
-                      <a href="#" class="thumb white-matte"></a>
+                      <a href="#" class="thumb white-matte" style="text-align: center;">1</a>
+                      <a href="#" class="thumb white-matte" style="text-align: center;">2</a>
+                      <a href="#" class="thumb white-matte" style="text-align: center;">3</a>
                     </div>  
-                    <a href="#" class="right-button white-matte" style="margin-left: 120px; margin-top: -30px;">
+                    <a href="#" class="right-button white-matte" style="margin-left: 120px; margin-top: -25px;">
 
                       <span style="padding-left: 10px;">
                         &#8594;
