--- a/views/board-bar.html
+++ b/views/board-bar.html
@@ -323,12 +323,26 @@
             
           
           <div class="blured radied">
-            <div class="card block2" style="width: calc( 100% - 25px ); height: 42px; margin-left: 5px; margin-top: 5px;">
-              <div style="width: 40px; height: 40px; background: url('https://ihorkulinich.github.io/js-v1/img/wheel.png') no-repeat; background-size: contain;"></div>
+            <div class="card block2" style="width: calc( 100% - 25px ); height: 42px; margin-left: 5px; margin-top: 5px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
+              <div style="background: url('https://ihorkulinich.github.io/js-v1/img/wheel.png') no-repeat; background-size: contain;"></div>
+              <div>
+                <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">You can change some settings of this trello power-app</p>
+              </div>
+              <div>
+                <a href="#" class="CTA white-matte" style="padding: 5px 10px 5px 10px;"><h2 style="margin-left: 0px; margin-bottom: 0px;">Settings</h2></a>
+              </div>
             </div>
-            <div class="card block2" style="width: calc( 100% - 25px ); height: 42px; margin-left: 5px; margin-top: 5px;">
-              <div style="width: 40px; height: 40px; background: url('https://ihorkulinich.github.io/js-v1/img/faq.png') no-repeat; background-size: contain;"></div>
+
+            <div class="card block2" style="width: calc( 100% - 25px ); height: 42px; margin-left: 5px; margin-top: 5px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
+              <div style="background: url('https://ihorkulinich.github.io/js-v1/img/faq.png') no-repeat; background-size: contain;"></div>
+              <div>
+                <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">You can look for some answer about this trello power-app</p>
+              </div>
+              <div>
+                <a href="#" class="CTA white-matte" style="padding: 5px 10px 5px 10px;"><h2 style="margin-left: 20px; margin-bottom: 0px; margin-right: 20px;">F.A.Q.</h2></a>
+              </div>
             </div>
+
             <div class="card block2" style="width: calc( 100% - 25px ); height: 42px; margin-left: 5px; margin-top: 5px;">
               <div style="width: 40px; height: 40px; background: url('https://ihorkulinich.github.io/js-v1/img/sug.png') no-repeat; background-size: contain;"></div>
             </div>
