--- a/views/fields.popup.html
+++ b/views/fields.popup.html
@@ -20,27 +20,16 @@
   <body style="background: lightgrey; padding: 5px;">
     <div id="back">
     </div>
-    <script>
-        console.log("width: "+document.clientWidth+", height: "+document.clientHeight);
-    </script>
-    <!-- 
-        менюха, кнопка попап, кнопка вин
-        поля(поля, группы, сектора, автоматизация)
-        статус
-        задачи и подзадачи
-        переписка
-        комменты аля слак
-        чеклист
-        таймер-трекер
-        доки
-    -->
+
     <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
         <div style="background: url('../img/fields.png') no-repeat; background-size: contain;"></div>
         <div>
           <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">Page with input fields</p>
         </div>
         <div>
-          <a href="fieldssettings.popup.html" class="CTA white-matte" style="margin-left: 20px; padding: 5px 10px 5px 10px;"><h2 style="margin-left: 0px; margin-bottom: 0px;">Fields</h2></a>
+          <a href="fieldssettings.popup.html" class="CTA white-matte" style="margin-left: 20px; padding: 5px 10px 5px 10px;">
+              <p style="margin-left: 0px; margin-bottom: 0px;">Fields</p>
+            </a>
         </div>
     </div>
 
@@ -50,27 +39,41 @@
           <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">Page with dynamic input fields groups</p>
         </div>
         <div>
-          <a href="#" class="CTA white-matte" style="margin-left: 20px; padding: 5px 10px 5px 10px;"><h2 style="margin-left: 0px; margin-bottom: 0px;">Fields groups</h2></a>
+          <a href="#" class="CTA white-matte" style="margin-left: 20px; padding: 5px 10px 5px 10px;">
+              <p style="margin-left: 0px; margin-bottom: 0px;">Fields groups</p>
+            </a>
         </div>
     </div>
 
     <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
         <div style="background: url('../img/section.png') no-repeat; background-size: contain;"></div>
         <div>
-          <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">Page with input fields sections</p>
+          <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
+              Page with input fields sections
+            </p>
         </div>
         <div>
-          <a href="#" class="CTA white-matte" style="margin-left: 20px; padding: 5px 10px 5px 10px;"><h2 style="margin-left: 0px; margin-bottom: 0px;">Fields sections</h2></a>
+          <a href="#" class="CTA white-matte" style="margin-left: 20px; padding: 5px 10px 5px 10px;">
+              <p style="margin-left: 0px; margin-bottom: 0px;">
+                  Fields sections
+                </p>
+            </a>
         </div>
     </div>
 
     <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
         <div style="background: url('../img/autom.png') no-repeat; background-size: contain;"></div>
         <div>
-          <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">Page with input fields automatizations</p>
+          <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
+              Page with input fields automatizations
+            </p>
         </div>
         <div>
-          <a href="#" class="CTA white-matte" style="margin-left: 20px; padding: 5px 10px 5px 10px;"><h2 style="margin-left: 0px; margin-bottom: 0px;">Fields automatization</h2></a>
+          <a href="#" class="CTA white-matte" style="margin-left: 20px; padding: 5px 10px 5px 10px;">
+              <p style="margin-left: 0px; margin-bottom: 0px;">
+                  Fields automatization
+                </p>
+            </a>
         </div>
     </div>
 
