--- a/views/popup.html
+++ b/views/popup.html
@@ -21,7 +21,7 @@
     <div id="back">
     </div>
     <script>
-        console.log("width: "+document.clientWidth+", height: "+document.clientHeight);
+        console.log("width: "+document.body.clientWidth+", height: "+document.body.clientHeight);
     </script>
     <!-- 
         менюха, кнопка попап, кнопка вин
