--- a/views/fields.popup.html
+++ b/views/fields.popup.html
@@ -21,14 +21,29 @@
     <div id="back">
     </div>
 
+    <a href="popup.html" class="left-button white-matte">
+        <span style="padding-left: 12px;">
+        &#8592;
+        </span>
+    </a>
+    <p style="margin-left: 20px; margin-top: -20px;">
+        Back
+    </p>
+
+    <hr>
+
     <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
         <div style="background: url('../img/fields.png') no-repeat; background-size: contain;"></div>
         <div>
-          <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">Page with input fields</p>
+          <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
+              Page with input fields
+            </p>
         </div>
         <div>
           <a href="fieldssettings.popup.html" class="CTA white-matte" style="margin-left: 20px; padding: 5px 10px 5px 10px;">
-              <p style="margin-left: 0px; margin-bottom: 0px;">Fields</p>
+              <p style="margin-left: 0px; margin-bottom: 0px;">
+                  Fields
+                </p>
             </a>
         </div>
     </div>
@@ -36,11 +51,15 @@
     <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
         <div style="background: url('../img/group.png') no-repeat; background-size: contain;"></div>
         <div>
-          <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">Page with dynamic input fields groups</p>
+          <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
+              Page with dynamic input fields groups
+            </p>
         </div>
         <div>
           <a href="#" class="CTA white-matte" style="margin-left: 20px; padding: 5px 10px 5px 10px;">
-              <p style="margin-left: 0px; margin-bottom: 0px;">Fields groups</p>
+              <p style="margin-left: 0px; margin-bottom: 0px;">
+                  Fields groups
+                </p>
             </a>
         </div>
     </div>
