--- a/views/fields.popup.html
+++ b/views/fields.popup.html
@@ -17,7 +17,7 @@
       
     </style>
   </head>
-  <body style="background: lightgrey; padding: 5px;">
+  <body>
     <div id="back">
     </div>
 
@@ -32,16 +32,16 @@
 
     <hr>
 
-    <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
+    <div class="card block2 chooseblock">
         <div style="background: url('../img/fields.png') no-repeat; background-size: contain;"></div>
         <div>
-          <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
+            <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
               Page with input fields
             </p>
         </div>
         <div>
-          <a href="fieldssettings.popup.html" class="CTA white-matte" style="margin-left: 20px; padding: 5px 10px 5px 10px;">
-              <p style="margin-left: 0px; margin-bottom: 0px;">
+          <a href="fieldssettings.popup.html" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
+                <p style="margin-left: 0px; margin-bottom: 0px;">
                   Fields
                 </p>
             </a>
@@ -51,13 +51,13 @@
     <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
         <div style="background: url('../img/group.png') no-repeat; background-size: contain;"></div>
         <div>
-          <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
+            <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
               Page with dynamic input fields groups
             </p>
         </div>
         <div>
-          <a href="#" class="CTA white-matte" style="margin-left: 20px; padding: 5px 10px 5px 10px;">
-              <p style="margin-left: 0px; margin-bottom: 0px;">
+          <a href="#" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
+                <p style="margin-left: 0px; margin-bottom: 0px;">
                   Fields groups
                 </p>
             </a>
@@ -67,13 +67,13 @@
     <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
         <div style="background: url('../img/section.png') no-repeat; background-size: contain;"></div>
         <div>
-          <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
+            <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
               Page with input fields sections
             </p>
         </div>
         <div>
-          <a href="#" class="CTA white-matte" style="margin-left: 20px; padding: 5px 10px 5px 10px;">
-              <p style="margin-left: 0px; margin-bottom: 0px;">
+          <a href="#" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
+                <p style="margin-left: 0px; margin-bottom: 0px;">
                   Fields sections
                 </p>
             </a>
@@ -83,13 +83,13 @@
     <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
         <div style="background: url('../img/autom.png') no-repeat; background-size: contain;"></div>
         <div>
-          <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
+            <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
               Page with input fields automatizations
             </p>
         </div>
         <div>
-          <a href="#" class="CTA white-matte" style="margin-left: 20px; padding: 5px 10px 5px 10px;">
-              <p style="margin-left: 0px; margin-bottom: 0px;">
+          <a href="#" class="CTA white-matte" style="margin-left: 5px; padding: 5px 10px 5px 10px;">
+                <p style="margin-left: 0px; margin-bottom: 0px;">
                   Fields automatization
                 </p>
             </a>
