--- a/views/fieldssettings.popup.html
+++ b/views/fieldssettings.popup.html
@@ -17,7 +17,7 @@
       
     </style>
   </head>
-  <body style="background: lightgrey; padding: 5px;">
+  <body>
     <div id="back">
     </div>
 
