--- a/public/css/popup.css
+++ b/public/css/popup.css
@@ -30,3 +30,17 @@ select { height: 30px; }
         top: -13px;
         display: inline;
     }
+
+    .chooseblock{
+        width: calc( 100% - 10px ); 
+        height: 42px; 
+        display: grid; 
+        grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); 
+        grid-auto-rows: 40px; 
+        grid-row-gap: 10px;
+        margin-top: 10px;
+    }
+
+    .chooseblock:first-child{
+        margin-top: 0px;
+    }
