--- a/views/fields.popup.html
+++ b/views/fields.popup.html
@@ -40,10 +40,13 @@
             </p>
         </div>
         <div>
-          <a href="fieldssettings.popup.html" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
+            <a href="fieldssettings.popup.html" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
                 <p style="margin-left: 0px; margin-bottom: 0px;">
                   Fields
                 </p>
+            </a>
+            <a href="addfield.popup.html" id="addfield" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
+                <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add</p>
             </a>
         </div>
     </div>
@@ -56,10 +59,13 @@
             </p>
         </div>
         <div>
-          <a href="#" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
+            <a href="#" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
                 <p style="margin-left: 0px; margin-bottom: 0px;">
                   Fields groups
                 </p>
+            </a>
+            <a href="#" id="addfieldgroup" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
+                <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add</p>
             </a>
         </div>
     </div>
@@ -72,10 +78,13 @@
             </p>
         </div>
         <div>
-          <a href="#" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
+            <a href="#" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
                 <p style="margin-left: 0px; margin-bottom: 0px;">
                   Fields sections
                 </p>
+            </a>
+            <a href="#" id="addfieldsection" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
+                <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add</p>
             </a>
         </div>
     </div>
@@ -88,14 +97,17 @@
             </p>
         </div>
         <div>
-          <a href="#" class="CTA white-matte" style="margin-left: 5px; padding: 5px 10px 5px 10px;">
+            <a href="#" class="CTA white-matte" style="margin-left: 5px; padding: 5px 10px 5px 10px;">
                 <p style="margin-left: 0px; margin-bottom: 0px;">
                   Fields automatization
                 </p>
             </a>
+            <a href="#" id="addautom" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
+                <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add</p>
+            </a>
         </div>
     </div>
 
-    <script src="../public/js/popup.js"></script>
+    <script src="../public/js/fields.popup.js"></script>
   </body>
 </html>
