--- a/views/fieldssettings.popup.html
+++ b/views/fieldssettings.popup.html
@@ -27,28 +27,6 @@
            <hr class="fss">
         </div>
     </form>
-    <form id="fieldsetting" style="display: none;">
-       <div style="width: calc( 100% - 10px ); margin-left: 5px; height: 40px;">
-           <button id="fsback" style="display: inline;">&#60;</button>
-           <hr class="fs">
-        </div>
-        <fieldset id="textsettings" style="display: none;">
-            <label for="nameset">Name:</label>
-            <input type="text" value="" id="nameset">
-            <label for="typeset">Name:</label>
-            <input id="typeset" list="typelistset">
-            
-            <datalist id="typeset">
-                <option value="Text">
-                <option value="List">
-            </datalist>
-        </fieldset>
-        <fieldset id="listsettings" style="display: none;">
-            
-            
-        </fieldset>
-        <button style="background: grey;" id="settingset"></button>
-    </form>
-    <script src="../public/js/popup.js"></script>
+    <script src="../public/js/fieldssettings.popup.js"></script>
   </body>
 </html>
