--- a/views/popup.html
+++ b/views/popup.html
@@ -35,7 +35,7 @@
         доки
     -->
     <div>
-        <a href="fields.popup.html" class="CTA white-matte" style="padding: 5px 10px 5px 10px;">
+        <a href="fields.popup.html" class="CTA white-matte" style="padding: 5px 10px 5px 10px; width: 160px;">
             <img src="../img/fields.png" width="15px" height="15px">
             <h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px;">Fields</h2>
         </a>
